--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PROYECTO</string>
+    <string name="title_activity_mazos">Mazos</string>
+    <string name="title_activity_historial">Historial</string>
 </resources>
